[gd_scene load_steps=36 format=2]

[ext_resource path="res://Sprites/Gothicvania/Characters/Player/Monk/idle-monk.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Gothicvania/Characters/Player/SwampShooter/idle/idle1.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Gothicvania/Characters/Player/CemeteryHero/idle/hero-idle-1.png" type="Texture" id=3]
[ext_resource path="res://Shaders/GlowShader.shader" type="Shader" id=4]
[ext_resource path="res://Sprites/Gothicvania/Characters/Player/Monk/idle-emission.png" type="Texture" id=5]
[ext_resource path="res://Scenes/WorldEnvironment.tscn" type="PackedScene" id=6]
[ext_resource path="res://Sprites/CharacterSelection.png" type="Texture" id=7]
[ext_resource path="res://Script/Menus/CharacterSelection.gd" type="Script" id=8]
[ext_resource path="res://Sprites/Gothicvania/Characters/Player/SwampShooter/idle/idle5.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Gothicvania/Characters/Player/SwampShooter/idle/idle4.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Gothicvania/Characters/Player/SwampShooter/idle/idle2.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Gothicvania/Characters/Player/SwampShooter/idle/idle6.png" type="Texture" id=12]
[ext_resource path="res://Sprites/Gothicvania/Characters/Player/SwampShooter/idle/idle3.png" type="Texture" id=13]
[ext_resource path="res://Sprites/Gothicvania/Characters/Player/CemeteryHero/idle/hero-idle-2.png" type="Texture" id=14]
[ext_resource path="res://Sprites/Gothicvania/Characters/Player/CemeteryHero/idle/hero-idle-3.png" type="Texture" id=15]
[ext_resource path="res://Sprites/Gothicvania/Characters/Player/CemeteryHero/idle/hero-idle-4.png" type="Texture" id=16]
[ext_resource path="res://Sprites/HUD/Life.png" type="Texture" id=17]
[ext_resource path="res://Scenes/Menu/StageSelect.tscn" type="PackedScene" id=18]


[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 4 )
shader_param/glow_color = Color( 1, 0.74902, 0, 0.286275 )
shader_param/emission_texture = ExtResource( 5 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 30, 10, 25, 25 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 15, 5, 25, 25 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 40, 10, 25, 25 )

[sub_resource type="DynamicFontData" id=5]
antialiased = false
font_path = "res://Font/PixelOperator.ttf"

[sub_resource type="DynamicFont" id=6]
size = 32
font_data = SubResource( 5 )

[sub_resource type="AnimatedTexture" id=7]

[sub_resource type="ShaderMaterial" id=8]
shader = ExtResource( 4 )
shader_param/glow_color = Color( 1, 0.74902, 0, 0.286275 )
shader_param/emission_texture = ExtResource( 5 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 82, 60 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 82, 0, 82, 60 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 164, 0, 82, 60 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 246, 0, 82, 60 )

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ) ],
"loop": true,
"name": "CemeteryHero",
"speed": 6.0
}, {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "Monk",
"speed": 4.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 11 ), ExtResource( 13 ), ExtResource( 10 ), ExtResource( 9 ), ExtResource( 12 ) ],
"loop": true,
"name": "SwampShooter",
"speed": 8.0
} ]

[sub_resource type="DynamicFontData" id=14]
antialiased = false
font_path = "res://Font/PixelOperator.ttf"

[sub_resource type="DynamicFont" id=15]
size = 36
extra_spacing_char = 2
font_data = SubResource( 14 )

[sub_resource type="DynamicFontData" id=16]
antialiased = false
font_path = "res://Font/PixelOperator.ttf"

[sub_resource type="DynamicFont" id=17]
size = 32
font_data = SubResource( 16 )

[node name="CharacterSelection" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}
stage_selection = ExtResource( 18 )

[node name="Bg" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer"]
margin_right = 20.0
margin_bottom = 360.0
custom_constants/margin_right = 20

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 24.0
margin_right = 99.0
margin_bottom = 360.0
custom_constants/separation = 35
alignment = 1

[node name="Monk" type="TextureButton" parent="HBoxContainer/VBoxContainer"]
material = SubResource( 1 )
margin_top = 32.0
margin_right = 75.0
margin_bottom = 107.0
rect_min_size = Vector2( 75, 75 )
texture_normal = SubResource( 2 )
expand = true

[node name="SwampShooter" type="TextureButton" parent="HBoxContainer/VBoxContainer"]
margin_top = 142.0
margin_right = 75.0
margin_bottom = 217.0
rect_min_size = Vector2( 75, 75 )
texture_normal = SubResource( 3 )
expand = true

[node name="CemeteryHero" type="TextureButton" parent="HBoxContainer/VBoxContainer"]
margin_top = 252.0
margin_right = 75.0
margin_bottom = 327.0
rect_min_size = Vector2( 75, 75 )
texture_normal = SubResource( 4 )
expand = true

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 103.0
margin_right = 383.0
margin_bottom = 360.0

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer2"]
margin_right = 280.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 6 )
text = "CYC"
align = 1
valign = 1

[node name="CharacterSprite" type="TextureRect" parent="HBoxContainer/VBoxContainer2"]
margin_top = 36.0
margin_right = 280.0
margin_bottom = 36.0
rect_min_size = Vector2( 280, 0 )
texture = SubResource( 7 )
expand = true
stretch_mode = 3

[node name="AnimatedSprite" type="AnimatedSprite" parent="HBoxContainer/VBoxContainer2/CharacterSprite"]
material = SubResource( 8 )
position = Vector2( 162, 146 )
scale = Vector2( 5, 5 )
z_index = 2
frames = SubResource( 13 )
animation = "Monk"
frame = 2
playing = true

[node name="CharacterName" type="Label" parent="HBoxContainer/VBoxContainer2"]
margin_top = 40.0
margin_right = 280.0
margin_bottom = 72.0
custom_fonts/font = SubResource( 6 )
text = "Monk"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer3" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 387.0
margin_right = 637.0
margin_bottom = 360.0

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/VBoxContainer3"]
margin_right = 250.0
margin_bottom = 104.0
custom_constants/margin_bottom = 104

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer3"]
margin_top = 108.0
margin_right = 250.0
margin_bottom = 145.0
custom_fonts/font = SubResource( 15 )
text = "Stats"
align = 1
valign = 1

[node name="MarginContainer2" type="MarginContainer" parent="HBoxContainer/VBoxContainer3"]
margin_top = 149.0
margin_right = 250.0
margin_bottom = 149.0
rect_min_size = Vector2( 250, 0 )

[node name="GridContainer" type="GridContainer" parent="HBoxContainer/VBoxContainer3"]
margin_top = 153.0
margin_right = 250.0
margin_bottom = 257.0

[node name="HealthContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer3/GridContainer"]
margin_right = 238.0
margin_bottom = 32.0
custom_constants/separation = 5

[node name="Health" type="Label" parent="HBoxContainer/VBoxContainer3/GridContainer/HealthContainer"]
margin_right = 132.0
margin_bottom = 32.0
rect_min_size = Vector2( 132, 0 )
custom_fonts/font = SubResource( 17 )
text = "Health"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Points" type="HBoxContainer" parent="HBoxContainer/VBoxContainer3/GridContainer/HealthContainer"]
margin_left = 137.0
margin_right = 238.0
margin_bottom = 32.0
custom_constants/separation = 7

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/VBoxContainer3/GridContainer/HealthContainer/Points"]
margin_right = 20.0
margin_bottom = 32.0
texture = ExtResource( 17 )
stretch_mode = 4

[node name="TextureRect2" type="TextureRect" parent="HBoxContainer/VBoxContainer3/GridContainer/HealthContainer/Points"]
margin_left = 27.0
margin_right = 47.0
margin_bottom = 32.0
texture = ExtResource( 17 )
stretch_mode = 4

[node name="TextureRect3" type="TextureRect" parent="HBoxContainer/VBoxContainer3/GridContainer/HealthContainer/Points"]
margin_left = 54.0
margin_right = 74.0
margin_bottom = 32.0
texture = ExtResource( 17 )
stretch_mode = 4

[node name="TextureRect4" type="TextureRect" parent="HBoxContainer/VBoxContainer3/GridContainer/HealthContainer/Points"]
margin_left = 81.0
margin_right = 101.0
margin_bottom = 32.0
texture = ExtResource( 17 )
stretch_mode = 4

[node name="SpeedContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer3/GridContainer"]
margin_top = 36.0
margin_right = 238.0
margin_bottom = 68.0
custom_constants/separation = 5

[node name="Speed" type="Label" parent="HBoxContainer/VBoxContainer3/GridContainer/SpeedContainer"]
margin_right = 132.0
margin_bottom = 32.0
rect_min_size = Vector2( 132, 0 )
custom_fonts/font = SubResource( 17 )
text = "Speed"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Points" type="HBoxContainer" parent="HBoxContainer/VBoxContainer3/GridContainer/SpeedContainer"]
margin_left = 137.0
margin_right = 238.0
margin_bottom = 32.0
custom_constants/separation = 7

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/VBoxContainer3/GridContainer/SpeedContainer/Points"]
margin_right = 20.0
margin_bottom = 32.0
texture = ExtResource( 17 )
stretch_mode = 4

[node name="TextureRect2" type="TextureRect" parent="HBoxContainer/VBoxContainer3/GridContainer/SpeedContainer/Points"]
margin_left = 27.0
margin_right = 47.0
margin_bottom = 32.0
texture = ExtResource( 17 )
stretch_mode = 4

[node name="TextureRect3" type="TextureRect" parent="HBoxContainer/VBoxContainer3/GridContainer/SpeedContainer/Points"]
margin_left = 54.0
margin_right = 74.0
margin_bottom = 32.0
texture = ExtResource( 17 )
stretch_mode = 4

[node name="TextureRect4" type="TextureRect" parent="HBoxContainer/VBoxContainer3/GridContainer/SpeedContainer/Points"]
margin_left = 81.0
margin_right = 101.0
margin_bottom = 32.0
texture = ExtResource( 17 )
stretch_mode = 4

[node name="DamageContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer3/GridContainer"]
margin_top = 72.0
margin_right = 238.0
margin_bottom = 104.0
custom_constants/separation = 5

[node name="Damage" type="Label" parent="HBoxContainer/VBoxContainer3/GridContainer/DamageContainer"]
margin_right = 132.0
margin_bottom = 32.0
rect_min_size = Vector2( 132, 0 )
custom_fonts/font = SubResource( 17 )
text = "Damage"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Points" type="HBoxContainer" parent="HBoxContainer/VBoxContainer3/GridContainer/DamageContainer"]
margin_left = 137.0
margin_right = 238.0
margin_bottom = 32.0
custom_constants/separation = 7

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/VBoxContainer3/GridContainer/DamageContainer/Points"]
margin_right = 20.0
margin_bottom = 32.0
texture = ExtResource( 17 )
stretch_mode = 4

[node name="TextureRect2" type="TextureRect" parent="HBoxContainer/VBoxContainer3/GridContainer/DamageContainer/Points"]
margin_left = 27.0
margin_right = 47.0
margin_bottom = 32.0
texture = ExtResource( 17 )
stretch_mode = 4

[node name="TextureRect3" type="TextureRect" parent="HBoxContainer/VBoxContainer3/GridContainer/DamageContainer/Points"]
margin_left = 54.0
margin_right = 74.0
margin_bottom = 32.0
texture = ExtResource( 17 )
stretch_mode = 4

[node name="TextureRect4" type="TextureRect" parent="HBoxContainer/VBoxContainer3/GridContainer/DamageContainer/Points"]
margin_left = 81.0
margin_right = 101.0
margin_bottom = 32.0
texture = ExtResource( 17 )
stretch_mode = 4

[node name="CharacterSelection" type="Sprite" parent="."]
position = Vector2( -91, 74 )
texture = ExtResource( 7 )
centered = false

[node name="WorldEnvironment" parent="." instance=ExtResource( 6 )]
